--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,3 +10,10 @@
 footer{
     display: none;
 }
+
+section {
+    border: 0px !important;
+    border-width: 0px !important;
+    padding: 0px !important;
+    margin: 0 !important;
+}
